# acnode-cl

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
docs/: general-notes.md  source-layout.md  stm32.md
include/: target.h
include/core/: ACNodeCore.h  Console.h  ConsoleLogger.h  CriticalSection.h  Logger.h  Uart.h  utils.h
include/hardware/: Pin.h  Spi.h  Uart.h
include/networking/: LWIPTasks.h
include/storage/: Filesystem.h  LittleFS.h  SPIFlash.h
include/utilities/: CircularBuffer.h  SemaphoreHolder.h  Uncopyable.h  utils.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/core/: CMakeLists.txt  ConsoleLogger.cpp  Startup.cpp  Startup.h  destructors.cpp  main.cpp  utils.cpp
src/common/hardware/: CMakeLists.txt  Spi.cpp  destructors.cpp
src/common/networking/: CMakeLists.txt  LWIPTasks.cpp
src/common/storage/: CMakeLists.txt  LittleFS.cpp  SPIFlash.cpp  destructors.cpp
src/common/utilities/: CMakeLists.txt  CircularBuffer.cpp  destructors.cpp
src/targets/host/: CMakeLists.txt  IOStreamConsole.cpp  IOStreamConsole.h  init.cpp  target.cpp
src/targets/host/include/: FreeRTOSConfig.h
src/targets/stm32/: CMakeLists.txt  target.cpp
src/targets/stm32/include/: FreeRTOSConfig.h  acnode_target_config.h
src/targets/stm32/nucleo-stm32h743zi/: CMakeLists.txt  freertos_heap.c  interrupt_handlers.c
src/targets/stm32/pin/: STM32Pin.cpp  STM32Pin.h
src/targets/stm32/spi/: STM32Spi.cpp  STM32Spi.h
src/targets/stm32/uart/: STM32Uart.cpp  STM32Uart.h
src/tests/: CMakeLists.txt
src/tests/core/: CMakeLists.txt  Logger.cpp  MockLogger.h
src/tests/utilities/: CMakeLists.txt  CircularBuffer.cpp
targets/: CMakeLists.txt  host-opts.cmake
targets/stm32/: stm32cubeh7.cmake  target.cmake
targets/stm32/Platform/: stm32.cmake
targets/stm32/stm32h743zi/: STM32H743ZITx_FLASH.ld  stm32h7xx_it.c  sys_init.c  system_stm32h7xx.c  target_init.c
targets/stm32/stm32h743zi/cmsisos/: Readme.md  cmsis_os.c
targets/stm32/stm32h743zi/include/: lwipopts.h  stm32h7xx_hal_conf.h  stm32h7xx_nucleo_conf.h
targets/stm32/stm32h743zi/lwip/: ethernetif.c  ethernetif.h
targets/stm32/toolchains/: STM32H743ZI.cmake
