
# Low level utilities such as data structures
add_subdirectory(utilities)

# Networky stuff
add_subdirectory(networking)

# Generic hardware stuff like base classes for SPI, UARTs e.t.c
add_subdirectory(hardware)

# Utilities for managing storage of configuration and data
add_subdirectory(storage)

# The core ACNode software - brings the others together
add_subdirectory(core)
